Added all files after exp 1 GA 2018 with Disparate Impact Remover

--- a/notebooks/mult_repair_levels_income_GA/Folk_GA_2018-Copy1.ipynb
+++ b/notebooks/mult_repair_levels_income_GA/Folk_GA_2018-Copy1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c4769a60",
+   "id": "f3ff1149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5ce41773",
+   "id": "211d405d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "58ffc19d",
+   "id": "e5f1098a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "51b227ce",
+   "execution_count": 6,
+   "id": "6f59c1be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "22aee3d7",
+   "execution_count": 8,
+   "id": "99c92b6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,19 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "79decc54",
+   "execution_count": 9,
+   "id": "bdbe467e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -77,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "04eba8ce",
+   "execution_count": 10,
+   "id": "9be28621",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "a8d1d9a3",
+   "execution_count": 11,
+   "id": "612be365",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61243a16",
+   "id": "7152334f",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -120,10 +111,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "543f0140",
+   "execution_count": 12,
+   "id": "4220a550",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:No module named 'tempeh': LawSchoolGPADataset will be unavailable. To install, run:\n",
+      "pip install 'aif360[LawSchoolGPA]'\n",
+      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
+      "pip install 'aif360[AdversarialDebiasing]'\n",
+      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
+      "pip install 'aif360[AdversarialDebiasing]'\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import copy\n",
@@ -140,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "105b6b0c",
+   "id": "82b4135a",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -148,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "ea9d0985",
+   "execution_count": 13,
+   "id": "d233dd1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +163,7 @@
     "DB_COLLECTION_NAME = 'exp_mult_repair_levels'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
     "# FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.1, 0.2, 0.3]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.4, 0.5, 0.6, 0.7]\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'folk_GA_2018_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
@@ -167,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b90a49bb",
+   "id": "839c1b3a",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -175,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "6ab71369",
+   "execution_count": 14,
+   "id": "c1c20f3e",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +189,7 @@
        "'fairness_variance'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,8 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "ed324033",
+   "execution_count": 15,
+   "id": "9afac2f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,8 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "c416dd4b",
+   "execution_count": 16,
+   "id": "9da6c97d",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7abe9ad9",
+   "id": "e21fc498",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -244,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "e73c87f3",
+   "execution_count": 17,
+   "id": "d3ed790f",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +364,7 @@
        "4   14   1   1  8300   20    1   2     2    33  20.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,8 +377,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "30bea18d",
+   "execution_count": 18,
+   "id": "b9f28151",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +387,7 @@
        "(15000, 10)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45e32996",
+   "id": "17050476",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -402,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c5cc0d2",
+   "id": "5254c454",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -410,8 +414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "c623386c",
+   "execution_count": 19,
+   "id": "4e7e3c74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,8 +426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "5d2ee650",
+   "execution_count": 20,
+   "id": "e7cd32a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,15 +442,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "e6986241",
+   "execution_count": 21,
+   "id": "7b27a187",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-22 20:29:27 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-07-22 20:32:48 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -456,7 +460,7 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0, 0.1, 0.2, 0.3]',\n",
+      " 'fair_intervention_params_lst': '[0.4, 0.5, 0.6, 0.7]',\n",
       " 'model_init_seed': 100,\n",
       " 'session_uuid': '26beff01-939d-4d98-be67-65b150b352b2'}\n",
       "\n",
@@ -467,7 +471,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-22 20:29:27 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-07-22 20:32:49 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -488,7 +492,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40d07662f5c44b76af736c74cecfa383",
+       "model_id": "2849cacc6dcb4ef6bd3cce96806b79ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -503,15 +507,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "2023/07/22, 20:30:26: Tuning RandomForestClassifier...\n"
+      "intervention_param:  0.4\n",
+      "2023/07/22, 20:33:54: Tuning RandomForestClassifier...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-22 20:51:25 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-07-22 20:58:50 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
@@ -519,14 +523,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/07/22, 20:51:25: Tuning for RandomForestClassifier is finished [F1 score = 0.7781106614210981, Accuracy = 0.806]\n",
+      "2023/07/22, 20:58:50: Tuning for RandomForestClassifier is finished [F1 score = 0.7823440653237279, Accuracy = 0.8088888888888889]\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "839e6ef808584013810f3650facde197",
+       "model_id": "cf25dc40653948739494942167a49019",
        "version_major": 2,
        "version_minor": 0
       },
@@ -540,7 +544,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3f1f48decfb4a9bb2ac2112a36d6350",
+       "model_id": "f4b4f14d3bcd4b4ca875f98dc0cd6be1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -554,7 +558,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "724105c1193d430091c630ff12ecaa12",
+       "model_id": "d98c79b7586645419eca227a68911314",
        "version_major": 2,
        "version_minor": 0
       },
@@ -569,16 +573,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.1\n",
-      "2023/07/22, 21:15:27: Tuning RandomForestClassifier...\n",
-      "2023/07/22, 21:36:08: Tuning for RandomForestClassifier is finished [F1 score = 0.7780827741572397, Accuracy = 0.8055555555555557]\n",
+      "intervention_param:  0.5\n",
+      "2023/07/22, 21:20:39: Tuning RandomForestClassifier...\n",
+      "2023/07/22, 21:45:56: Tuning for RandomForestClassifier is finished [F1 score = 0.7774456414469478, Accuracy = 0.8048888888888889]\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b0eedc678f74c85826a35b75b97b484",
+       "model_id": "0e2cfb6dff5047e7a89a1744cdd57d2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -592,7 +596,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "243294b2ac0147f39dd42edd0fca36d7",
+       "model_id": "cce5e08f2a7648d8baad7e0cc6450d2a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -606,7 +610,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7dc13b3446da474bb38940d2a8ea5ba5",
+       "model_id": "1e9cccd6ea9e46619462a11c65f95c13",
        "version_major": 2,
        "version_minor": 0
       },
@@ -621,16 +625,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.2\n",
-      "2023/07/22, 21:50:10: Tuning RandomForestClassifier...\n",
-      "2023/07/22, 22:11:38: Tuning for RandomForestClassifier is finished [F1 score = 0.7775113312465664, Accuracy = 0.8051111111111111]\n",
+      "intervention_param:  0.6\n",
+      "2023/07/22, 22:51:28: Tuning RandomForestClassifier...\n",
+      "2023/07/22, 23:15:37: Tuning for RandomForestClassifier is finished [F1 score = 0.7793742202429582, Accuracy = 0.8075555555555556]\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "299cc779e6de44aa874f7cf1bb2fb32a",
+       "model_id": "09e7bdb9f70b4db58ddda245024fc843",
        "version_major": 2,
        "version_minor": 0
       },
@@ -644,7 +648,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4b572e6b1524042808cf97ee5aa5731",
+       "model_id": "ef86cab2ff2541a2abc6ce2d616acaab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -658,7 +662,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74da9026909a4acc8c5f28e4a2dc36a0",
+       "model_id": "b879ea799c1f4a04aee6658d7b13de21",
        "version_major": 2,
        "version_minor": 0
       },
@@ -673,16 +677,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.3\n",
-      "2023/07/22, 23:45:09: Tuning RandomForestClassifier...\n",
-      "2023/07/23, 00:06:07: Tuning for RandomForestClassifier is finished [F1 score = 0.7790724055901435, Accuracy = 0.806]\n",
+      "intervention_param:  0.7\n",
+      "2023/07/22, 23:40:39: Tuning RandomForestClassifier...\n",
+      "2023/07/23, 00:04:40: Tuning for RandomForestClassifier is finished [F1 score = 0.778720621402153, Accuracy = 0.807111111111111]\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54b161a249494b7d9c2365bbbebe20b8",
+       "model_id": "0787dbf5b38d4139a1e6ea5599e7b381",
        "version_major": 2,
        "version_minor": 0
       },
@@ -696,7 +700,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "209935a9dbb74f879c38960f77d0ff07",
+       "model_id": "d221723be1d74da2b57707d33e146247",
        "version_major": 2,
        "version_minor": 0
       },
@@ -710,7 +714,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "088cb2f04d714f83a2d6d26e94fb85aa",
+       "model_id": "ea101719de4e42eb8e7cf18aa1d16ddc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -740,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "136f960b",
+   "id": "277c45ff",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -749,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "be73d4d8",
+   "id": "f7ef13bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "118c9883",
+   "id": "b525d434",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1153b645",
+   "id": "b3d33591",
    "metadata": {},
    "outputs": [],
    "source": []
