--- a/notebooks/mult_repair_levels_income_GA/Folk_GA_2018-Copy2.ipynb
+++ b/notebooks/mult_repair_levels_income_GA/Folk_GA_2018-Copy2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c4769a60",
+   "id": "d7e031d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5ce41773",
+   "id": "b3bffa8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "58ffc19d",
+   "id": "5cdc9319",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "51b227ce",
+   "execution_count": 6,
+   "id": "d5dcef6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "22aee3d7",
+   "execution_count": 8,
+   "id": "c8a8e86a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,19 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "79decc54",
+   "execution_count": 9,
+   "id": "5eba8aee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -77,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "04eba8ce",
+   "execution_count": 10,
+   "id": "0cb2d9ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "a8d1d9a3",
+   "execution_count": 11,
+   "id": "51bbc4c4",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61243a16",
+   "id": "7ec34e85",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -120,10 +111,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "543f0140",
+   "execution_count": 12,
+   "id": "92af3fbe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:No module named 'tempeh': LawSchoolGPADataset will be unavailable. To install, run:\n",
+      "pip install 'aif360[LawSchoolGPA]'\n",
+      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
+      "pip install 'aif360[AdversarialDebiasing]'\n",
+      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
+      "pip install 'aif360[AdversarialDebiasing]'\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import copy\n",
@@ -140,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "105b6b0c",
+   "id": "0a54485a",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -148,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "ea9d0985",
+   "execution_count": 13,
+   "id": "f84b4c06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +163,7 @@
     "DB_COLLECTION_NAME = 'exp_mult_repair_levels'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
     "# FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.1, 0.2, 0.3]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.8, 0.9, 1.0]\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'folk_GA_2018_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
@@ -167,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b90a49bb",
+   "id": "e1fc6be0",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -175,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "6ab71369",
+   "execution_count": 14,
+   "id": "6f1f2b18",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +189,7 @@
        "'fairness_variance'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,8 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "ed324033",
+   "execution_count": 15,
+   "id": "479f944c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,8 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "c416dd4b",
+   "execution_count": 16,
+   "id": "614e3035",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7abe9ad9",
+   "id": "2305681c",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -244,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "e73c87f3",
+   "execution_count": 17,
+   "id": "5a5ea0be",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +364,7 @@
        "4   14   1   1  8300   20    1   2     2    33  20.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,8 +377,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "30bea18d",
+   "execution_count": 18,
+   "id": "585aeae1",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +387,7 @@
        "(15000, 10)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45e32996",
+   "id": "74be83c8",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -402,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c5cc0d2",
+   "id": "3f52b1ab",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -410,8 +414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "c623386c",
+   "execution_count": 19,
+   "id": "a242486c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,8 +426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "5d2ee650",
+   "execution_count": 20,
+   "id": "38a4b03b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,15 +442,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "e6986241",
+   "execution_count": 21,
+   "id": "3ab28db5",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-22 20:29:27 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-07-22 20:34:27 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -456,7 +460,7 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0, 0.1, 0.2, 0.3]',\n",
+      " 'fair_intervention_params_lst': '[0.8, 0.9, 1.0]',\n",
       " 'model_init_seed': 100,\n",
       " 'session_uuid': '26beff01-939d-4d98-be67-65b150b352b2'}\n",
       "\n",
@@ -467,7 +471,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-22 20:29:27 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-07-22 20:34:27 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -488,12 +492,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40d07662f5c44b76af736c74cecfa383",
+       "model_id": "e5a0050f27284472b4fc7d3955d8a489",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Multiple alphas:   0%|          | 0/4 [00:00<?, ?it/s]"
+       "Multiple alphas:   0%|          | 0/3 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -503,15 +507,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "2023/07/22, 20:30:26: Tuning RandomForestClassifier...\n"
+      "intervention_param:  0.8\n",
+      "2023/07/22, 20:35:28: Tuning RandomForestClassifier...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-22 20:51:25 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-07-22 20:57:39 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
@@ -519,14 +523,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/07/22, 20:51:25: Tuning for RandomForestClassifier is finished [F1 score = 0.7781106614210981, Accuracy = 0.806]\n",
+      "2023/07/22, 20:57:38: Tuning for RandomForestClassifier is finished [F1 score = 0.7774512705502147, Accuracy = 0.8055555555555557]\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "839e6ef808584013810f3650facde197",
+       "model_id": "1c3429fd5d274259947caa22fc255710",
        "version_major": 2,
        "version_minor": 0
       },
@@ -540,7 +544,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3f1f48decfb4a9bb2ac2112a36d6350",
+       "model_id": "7c56aaca52d04704aa20bbf3263f3ef9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -554,7 +558,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "724105c1193d430091c630ff12ecaa12",
+       "model_id": "6a92b031be214cd388a792edf0fb626c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -569,16 +573,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.1\n",
-      "2023/07/22, 21:15:27: Tuning RandomForestClassifier...\n",
-      "2023/07/22, 21:36:08: Tuning for RandomForestClassifier is finished [F1 score = 0.7780827741572397, Accuracy = 0.8055555555555557]\n",
+      "intervention_param:  0.9\n",
+      "2023/07/22, 21:09:13: Tuning RandomForestClassifier...\n",
+      "2023/07/22, 21:31:23: Tuning for RandomForestClassifier is finished [F1 score = 0.7779964468413846, Accuracy = 0.806]\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b0eedc678f74c85826a35b75b97b484",
+       "model_id": "3eb294e061b84f93a1273f955be5b273",
        "version_major": 2,
        "version_minor": 0
       },
@@ -592,7 +596,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "243294b2ac0147f39dd42edd0fca36d7",
+       "model_id": "a657dc853ad84ecabfe0e7697ec07015",
        "version_major": 2,
        "version_minor": 0
       },
@@ -606,7 +610,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7dc13b3446da474bb38940d2a8ea5ba5",
+       "model_id": "28bbf40919a8444da7e39d9c9245ff11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -621,16 +625,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.2\n",
-      "2023/07/22, 21:50:10: Tuning RandomForestClassifier...\n",
-      "2023/07/22, 22:11:38: Tuning for RandomForestClassifier is finished [F1 score = 0.7775113312465664, Accuracy = 0.8051111111111111]\n",
+      "intervention_param:  1.0\n",
+      "2023/07/22, 21:44:04: Tuning RandomForestClassifier...\n",
+      "2023/07/22, 22:06:23: Tuning for RandomForestClassifier is finished [F1 score = 0.7782667877698503, Accuracy = 0.8068888888888889]\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "299cc779e6de44aa874f7cf1bb2fb32a",
+       "model_id": "add5033d5a494b488ffc7adb1b0f81c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -644,7 +648,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4b572e6b1524042808cf97ee5aa5731",
+       "model_id": "97d6f46eb3294e86bd635d018166e5dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -658,59 +662,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74da9026909a4acc8c5f28e4a2dc36a0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervention_param:  0.3\n",
-      "2023/07/22, 23:45:09: Tuning RandomForestClassifier...\n",
-      "2023/07/23, 00:06:07: Tuning for RandomForestClassifier is finished [F1 score = 0.7790724055901435, Accuracy = 0.806]\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54b161a249494b7d9c2365bbbebe20b8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "209935a9dbb74f879c38960f77d0ff07",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "088cb2f04d714f83a2d6d26e94fb85aa",
+       "model_id": "4cbae44fba044de1930b5e035aa164c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -740,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "136f960b",
+   "id": "f295f5bf",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -749,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "be73d4d8",
+   "id": "2405377c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "118c9883",
+   "id": "f9ecdf04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1153b645",
+   "id": "903f05a9",
    "metadata": {},
    "outputs": [],
    "source": []
