--- a/notebooks/mult_repair_levels_pubcov_CA/Folk_CA_2018_Batch1-Copy1.ipynb
+++ b/notebooks/mult_repair_levels_pubcov_CA/Folk_CA_2018_Batch1-Copy1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "81cb6862",
+   "id": "a21cd3ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3dcff2aa",
+   "id": "cf08ad5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f4ee3292",
+   "id": "7f61c5a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7b955dc4",
+   "id": "3f214c4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "18fd017e",
+   "id": "0fd53831",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,19 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "c8957400",
+   "execution_count": 1,
+   "id": "5b581e50",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -77,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "45626b3a",
+   "execution_count": 2,
+   "id": "492ab7b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "0b0e8ec8",
+   "execution_count": 3,
+   "id": "acfdb1d5",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "960c2f5a",
+   "id": "6f85115a",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -120,10 +111,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "021b8bcd",
+   "execution_count": 4,
+   "id": "bda184a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:No module named 'tempeh': LawSchoolGPADataset will be unavailable. To install, run:\n",
+      "pip install 'aif360[LawSchoolGPA]'\n",
+      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
+      "pip install 'aif360[AdversarialDebiasing]'\n",
+      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
+      "pip install 'aif360[AdversarialDebiasing]'\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import copy\n",
@@ -140,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74fdf814",
+   "id": "983645e1",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -148,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "2718cc96",
+   "execution_count": 5,
+   "id": "16bcf46c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +163,7 @@
     "DB_COLLECTION_NAME = 'exp_mult_repair_levels'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
     "# FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.1]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.2, 0.3]\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'folk_CA_2018_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
@@ -167,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2841a365",
+   "id": "33475ddc",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -175,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "2e1bf351",
+   "execution_count": 6,
+   "id": "a83ff123",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +189,7 @@
        "'fairness_variance'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,8 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "5d8770c6",
+   "execution_count": 7,
+   "id": "9b3560b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,8 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "c3c0d0e3",
+   "execution_count": 8,
+   "id": "418967bf",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "171fab78",
+   "id": "1aa331dd",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -244,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "83c98251",
+   "execution_count": 9,
+   "id": "3d186894",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +425,7 @@
        "4     6    54     0.0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,8 +438,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "514b152b",
+   "execution_count": 10,
+   "id": "fc04e175",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +448,7 @@
        "(15000, 19)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a86d7689",
+   "id": "5f6dee13",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -463,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac69c4de",
+   "id": "1b650336",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -471,8 +475,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "9c82d742",
+   "execution_count": 11,
+   "id": "2db8111b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,8 +487,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "f4314734",
+   "execution_count": 12,
+   "id": "b15d3f61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,15 +503,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "71d05da1",
+   "execution_count": 13,
+   "id": "267dcae9",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-31 13:25:11 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-07-31 13:26:22 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -517,7 +521,7 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0, 0.1]',\n",
+      " 'fair_intervention_params_lst': '[0.2, 0.3]',\n",
       " 'model_init_seed': 100,\n",
       " 'session_uuid': '116104d6-7d63-4564-ae57-82b19b260fa5'}\n",
       "\n",
@@ -528,7 +532,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-31 13:25:12 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-07-31 13:26:22 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -549,7 +553,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fdbb1d0b7714e4cbc42dd2d01939ce6",
+       "model_id": "c108aa16b7a94cceb175d58d6282b999",
        "version_major": 2,
        "version_minor": 0
       },
@@ -564,15 +568,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "2023/07/31, 13:25:15: Tuning RandomForestClassifier...\n"
+      "intervention_param:  0.2\n",
+      "2023/07/31, 13:26:25: Tuning RandomForestClassifier...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-31 13:30:53 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-07-31 13:31:53 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
@@ -580,14 +584,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/07/31, 13:30:53: Tuning for RandomForestClassifier is finished [F1 score = 0.6646237519941398, Accuracy = 0.7135555555555556]\n",
+      "2023/07/31, 13:31:53: Tuning for RandomForestClassifier is finished [F1 score = 0.6658792149288182, Accuracy = 0.7106666666666666]\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae0cc590c899484bbb00f2cd8fa9cd56",
+       "model_id": "cd70e36dd91b4189affecca0c81b2fd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -601,7 +605,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb1ee082613c40b4974521273b121917",
+       "model_id": "cdac0f06a4884e46a2d382c4381887d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -615,7 +619,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d744fcb38f64a5586df7d04482a0536",
+       "model_id": "c20ebe42ef584b84ac62e0b85041b319",
        "version_major": 2,
        "version_minor": 0
       },
@@ -630,16 +634,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.1\n",
-      "2023/07/31, 13:35:55: Tuning RandomForestClassifier...\n",
-      "2023/07/31, 13:41:51: Tuning for RandomForestClassifier is finished [F1 score = 0.6658729175624925, Accuracy = 0.7133333333333334]\n",
+      "intervention_param:  0.3\n",
+      "2023/07/31, 13:36:27: Tuning RandomForestClassifier...\n",
+      "2023/07/31, 13:41:53: Tuning for RandomForestClassifier is finished [F1 score = 0.6639407438501788, Accuracy = 0.7133333333333334]\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1f3749d53e04110bc4cc204e6b03726",
+       "model_id": "d187f3f4e3274d72bdbed158c1fa65fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -653,7 +657,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "912e970a51054c148a4eddae8fcdc71b",
+       "model_id": "905b1d5510c54bf590764b2d7968c8d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -667,7 +671,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fc80a6761c4442986d4f5511fdfbdd2",
+       "model_id": "baa7e68995a04db3bedee0724de7e4ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -697,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0d28cdc",
+   "id": "68f7921b",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -706,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "59934602",
+   "id": "b25cbc14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e8508797",
+   "id": "90718d8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "849f9aa6",
+   "id": "c4baf15a",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -762,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acc37ddd",
+   "id": "e759fcbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95980d4f",
+   "id": "e73cfd32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66904e52",
+   "id": "bd6924f7",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -818,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e2c3182",
+   "id": "c5086f84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d271afd8",
+   "id": "2415a2f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e52da70",
+   "id": "015e1441",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -875,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c828ac44",
+   "id": "94795268",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf6821f6",
+   "id": "716967e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +926,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c06a3e4",
+   "id": "3bf21b89",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -931,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc8d6189",
+   "id": "21bbc927",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6466c8c",
+   "id": "78bb8ba1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d85c6ba0",
+   "id": "11d6cdf4",
    "metadata": {},
    "outputs": [],
    "source": []
